optimised file transfer
svg and css is no longer embedded

--- a/circuitpy/www/mode_block.html
+++ b/circuitpy/www/mode_block.html
@@ -1,14 +1,14 @@
 <div class="modes_flex_child">
-	<a href="?mode_start={3}">
+	<a href="?mode_start={2}">
 		<button class="modes_button_start">
-			{0}
+			<img src="/source/?file={0}"/>
 			<br>
 			{1}
 		</button>
 	</a>
-	<a href="?mode_config={3}">
+	<a href="?mode_config={2}">
 		<button class="modes_button_config">
-			{2}
+			<img src="/source/?file=cog.svg"/>
 		</button>
 	</a>
 </div>
