--- a/circuitpy/www/mode_config.html
+++ b/circuitpy/www/mode_config.html
@@ -6,21 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Skully - {2}</title>
-	<style>
-		{0}
-	</style>
+	<link rel="stylesheet" href="config_style.css">
 </head>
-
 <body>
-
 
 		<div style="display:flex;align-items:center;width:100%;">
 			<a href="/">
 				<button>
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-left-thick</title><path d="M20,10V14H11L14.5,17.5L12.08,19.92L4.16,12L12.08,4.08L14.5,6.5L11,10H20Z" style="fill:#ffffff"/></svg>
+					<img src="/source?file=arrow-left-thick.svg"/>
 				</button>
 			</a>
-			{1}
+			<img src="/source/?file={1}"/>
 			<h1 id="title">
 				{2}
 			</h1>
